--- a/04-JS-III/homework/test.html
+++ b/04-JS-III/homework/test.html
@@ -1,23 +1,30 @@
+<div id="out"></div>
+<script>
+// var - let
+function out(txt){
+	document.querySelector("#out").innerHTML = txt
+}
+
 // No cambies los nombres de las funciones.
 
 function devolverPrimerElemento(array) {
   // Devuelve el primer elemento de un array
   // Tu código:
-  return array[0];
+  return array[0]
 }
 
 
 function devolverUltimoElemento(array) {
   // Devuelve el último elemento de un array
   // Tu código:
-  return array[array.length - 1]; // array.pop()
+  return array.pop()
 }
 
 
 function obtenerLargoDelArray(array) {
   // Devuelve el largo de un array
   // Tu código:
-  return array.length;
+  return array.length
 }
 
 
@@ -26,11 +33,7 @@ function incrementarPorUno(array) {
   // Aumenta cada entero por 1
   // y devuelve el array
   // Tu código:
-  var nuevoArray = [];
-  for(var i = 0; i < array.length; i++) {
-    nuevoArray[i] = array[i] + 1;
-  }
-  return nuevoArray;
+  return array.map( item => item++ )
 }
 
 
@@ -38,8 +41,8 @@ function agregarItemAlFinalDelArray(array, elemento) {
   // Añade el "elemento" al final del array
   // y devuelve el array
   // Tu código:
-  array[array.length] = elemento;
-  return array;
+  array.push(elemento)
+  return array
 }
 
 
@@ -48,8 +51,8 @@ function agregarItemAlComienzoDelArray(array, elemento) {
   // y devuelve el array
   // Pista: usa el método `.unshift`
   // Tu código:
-  array.unshift(elemento);
-  return array;
+  array.unshift(elemento)
+  return array
 }
 
 
@@ -59,7 +62,7 @@ function dePalabrasAFrase(palabras) {
   // con espacios entre cada palabra
   // Ejemplo: ['Hello', 'world!'] -> 'Hello world!'
   // Tu código:
-  return palabras.join(' ');
+  return array.join(" ")
 }
 
 
@@ -67,24 +70,20 @@ function arrayContiene(array, elemento) {
   // Comprueba si el elemento existe dentro de "array"
   // Devuelve "true" si está, o "false" si no está
   // Tu código:
-  for(var i = 0; i < array.length; i++) {
-    if(array[i] === elemento) {
-      return true;
-    }
-  }
-  return false;
+  return (array.indexOf(elemento) > -1)
 }
 
 
-function agregarNumeros(numeros) {
+function agregarNumeros(numeros) { // sumaSoloLosEnteros( arrayNumero )
   // "array" debe ser una matriz de enteros (int/integers)
   // Suma todos los enteros y devuelve el valor
   // Tu código:
-  var suma = 0;
-  for(var i = 0; i < numeros.length; i++) {
-    suma = suma + numeros[i];
-  }
-  return suma;
+  let result = 0
+  array.map( item => {
+  	if( Number.isInteger(item)) result += item 
+
+  }) // result = result + item
+  return result
 }
 
 
@@ -92,7 +91,7 @@ function promedioResultadosTest(resultadosTest) {
   // "resultadosTest" debe ser una matriz de enteros (int/integers)
   // Itera (en un bucle) los elementos del array, calcula y devuelve el promedio de puntajes
   // Tu código:
-  return agregarNumeros(resultadosTest) / resultadosTest.length;
+  return agregarNumeros( resultadosTest ) / resultadosTest.length
 }
 
 
@@ -100,13 +99,13 @@ function numeroMasGrande(numeros) {
   // "numeros" debe ser una matriz de enteros (int/integers)
   // Devuelve el número más grande
   // Tu código:
-  var maximo = numeros[0];
-  for(var i = 1; i < numeros.length; i++) {
-    if(numeros[i] > maximo) {
-      maximo = numeros[i];
-    }
-  }
-  return maximo;
+  let mayor = 0
+
+  numeros.map( item => {
+  	if( item > mayor ) mayor = item
+  } )
+
+  return mayor
 }
 
 
@@ -114,35 +113,37 @@ function multiplicarArgumentos() {
   // Usa la palabra clave `arguments` para multiplicar todos los argumentos y devolver el producto
   // Si no se pasan argumentos devuelve 0. Si se pasa un argumento, simplemente devuélvelo
   // Escribe tu código aquí:
-  if (arguments.length < 1) return 0;
-  var total = 1
-  for(var i = 0; i < arguments.length; i++) {
-    total = total * arguments[i];
-  }
-  return total;
 }
+
 
 function cuentoElementos(arreglo){
   //Realiza una función que retorne la cantidad de los elementos del arreglo cuyo valor es mayor a 19.
   //Escribe tu código aquí
-  let contador = 0;
-  for (let i = 0; i < arreglo.length ; i++) {
-    if(arreglo[i] > 19) {
-      contador++
-    }
+
+  let mayor = 0
+  for(let item of arreglo ){
+  	if( item > 19 ) mayor++
   }
-  return contador
+	return mayor
 }
 
+
 function diaDeLaSemana(numeroDeDia) {
-  //Suponga que los días de la semana se codifican como 1 = Domingo, 2 = Lunes y así sucesivamente. 
-  //Realiza una función que dado el número del día de la semana, retorne: Es fin de semana
-  //si el día corresponde a Sábado o Domingo y “Es dia Laboral” en caso contrario. 
-  //Escribe tu código aquí   
-  if (numeroDeDia === 1 || numeroDeDia === 7) {
-    return 'Es fin de semana'
-  }
-  return 'Es dia Laboral'
+/*
+  Suponga que los días de la semana se codifican como 1 = Domingo, 2 = Lunes y así sucesivamente. 
+  Realiza una función que dado el número del día de la semana, retorne: Es fin de semana
+  si el día corresponde a Sábado o Domingo y “Es dia Laboral” en caso contrario. 
+  Escribe tu código aquí  
+  && 
+  */
+  //null,dom, . ... . , sabado]
+  //if( dom < numeroDeDia < sabado ) dia Laboral
+  //else fin de semana
+  
+  if ( 1 < numeroDeDia && 7 > numeroDeDia) {
+  	return "Es dia Laboral"
+  } 
+  return "Es fin de semana"
 } 
 
 
@@ -150,11 +151,7 @@ function empiezaConNueve(n) {
   //Desarrolle una función que recibe como parámetro un número entero n. Debe retornar true si el entero 
   //inicia con 9 y false en otro caso.
   //Escribe tu código aquí
-  let num = n.toString()
-  if (num.charAt(0) === "9") {
-    return true
-  }
-  return false
+  
 }
 
 
@@ -162,12 +159,7 @@ function todosIguales(arreglo) {
   //Escriba la función todosIguales, que indique si todos los elementos de un arreglo son iguales:
   //retornar true, caso contrario retornar false.
   //Escribe tu código aquí  
-  for(var i = 0; i < arreglo.length-1; i++){
-    if (arreglo[i] !== arreglo[i+1]) {
-      return false
-    }
-  }
-  return true
+  
 } 
 
 
@@ -176,16 +168,6 @@ function mesesDelAño(array) {
   // "Enero", "Marzo" y "Noviembre", guardarlo en nuevo array y retornarlo.
   //Si alguno de los meses no está, devolver: "No se encontraron los meses pedidos"
   // Tu código:
-  var nuevoArray = [];
-  for(var i = 0; i<array.length; i++){
-    if (array[i] === "Enero" || array[i] === "Marzo" || array[i] === "Noviembre") {
-      nuevoArray.push(array[i]);
-    }
-  }
-  if (nuevoArray.length < 3) {
-    return "No se encontraron los meses pedidos"
-  }
-  return nuevoArray;
 }
 
 
@@ -217,28 +199,5 @@ function continueStatement(numero) {
 }
 
 
-// No modificar nada debajo de esta línea
-// --------------------------------
 
-module.exports = {
-  devolverPrimerElemento,
-  devolverUltimoElemento,
-  obtenerLargoDelArray,
-  incrementarPorUno,
-  agregarItemAlFinalDelArray,
-  agregarItemAlComienzoDelArray,
-  dePalabrasAFrase,
-  arrayContiene,
-  agregarNumeros,
-  promedioResultadosTest,
-  numeroMasGrande,
-  multiplicarArgumentos,
-  cuentoElementos,
-  diaDeLaSemana,
-  empiezaConNueve,
-  todosIguales,
-  mesesDelAño,
-  mayorACien,
-  breakStatement,
-  continueStatement
-};
+</script>
